# caw

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  UI-POLISH.md  caw.desktop  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-rpm.yml
scripts/: dev-setup.sh  fix-linuxdeploy-strip.sh  run-dev.sh
src/: App.vue  main.rs  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  controller.rs  db.rs  lib.rs  main.rs  mpris.rs  platform.rs  tray.rs
src-tauri/src/audio/: decoder.rs  library.rs  player.rs
src/audio/: mod.rs
src/components/: AlbumDetail.vue  AlbumGrid.vue  ArtistDetail.vue  ArtistList.vue  Content.vue  CoverArt.vue  FolderView.vue  Placeholder.vue  PlayerBar.vue  PlaylistDetail.vue  PlaylistDialog.vue  QueuePanel.vue  Settings.vue  Sidebar.vue  TitleBar.vue  TrackTable.vue
src/components/ui/: Button.vue  ConfirmDialog.vue  Input.vue  Slider.vue  Tooltip.vue
src/composables/: useKeyboardShortcuts.ts
src/lib/: fonts.ts  tauri.ts  utils.ts
src/models/: mod.rs  playlist.rs  track.rs
src/stores/: playback.ts  playlists.ts  view.ts
src/ui/: content.rs  cover.rs  icons.rs  mod.rs  player_bar.rs  sidebar.rs
