[package]
name = "caw"
version = "0.1.0"
edition = "2024"

[dependencies]
# GUI framework
eframe = "0.34"
egui = "0.34"
egui_material_icons = "0.6"

# Audio decoding
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }

# Audio output (Linux: ALSA backend → PipeWire)
cpal = "0.18"

# Utilities
anyhow = "1"
crossbeam-channel = "0.5"
walkdir = "2"
dirs = "5"
image = "0.25"
