[package]
name = "caw"
version = "0.1.0"
edition = "2024"

[lib]
name = "caw_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio decoding
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }

# Audio output (Linux: ALSA backend → PipeWire)
cpal = "0.18"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
anyhow = "1"
crossbeam-channel = "0.5"
walkdir = "2"
dirs = "5"
