[package]
name = "caw"
version = "0.1.0"
edition = "2024"

[lib]
name = "caw_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio decoding
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }

# Audio output (Linux: ALSA backend → PipeWire)
cpal = "0.18"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# D-Bus / MPRIS (Linux media keys + DE integration)
zbus = "5"
zvariant = "5"

# Event loop for D-Bus (separate thread)
tokio = { version = "1", features = ["rt", "sync"] }

# Utilities
anyhow = "1"
crossbeam-channel = "0.5"
walkdir = "2"
dirs = "5"

# Encoding: fix GBK-mojibake tags (some FLAC/MP3 rippers store GBK bytes instead
# of the UTF-8 required by Vorbis/ID3v2; Symphonia reads them byte-by-byte as
# Latin-1, producing double-mojibake like ÄãÒÔÎªÎÒÊÇË for 你以为我是谁).
encoding_rs = "0.8"
image = "0.25"

# Speed up heavy CPU-bound deps under `cargo tauri dev` (debug).
# Symphonia's decode loop is unoptimized in debug and ~30x slower than release
# (~4s/song vs ~130ms), causing large playback start latency during development.
# opt-level=3 on *all* dependencies closes the gap, while keeping caw's own code
# at opt-level=0 for fast incremental rebuilds + full debug symbols.
# NOTE: must be the wildcard "*" — symphonia is a facade crate; the real decode
# work happens in sub-crates (symphonia-bundle-flac, symphonia-core, ...), and
# per-package opts only hit the facade, not the workers (measured: still ~4s).
[profile.dev.package."*"]
opt-level = 3
